[tool.poetry]
name = "moessie"
version = "0.1.0"
description = ""
authors = ["Eri Wiana <eriwiana@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.13"
deta = "^1.1.0"
fastapi = "^0.89.1"
fastapi-restful = "^0.4.3"
Jinja2 = "^3.1.2"
pydantic = "^1.10.4"
uvicorn = "^0.20.0"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
black = "^22.12.0"
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
